dashboard manager+employee